--- a/HOSA_code_availability/HOSA_algorithm.ipynb
+++ b/HOSA_code_availability/HOSA_algorithm.ipynb
@@ -541,8 +541,8 @@
     "from obspy import UTCDateTime \n",
     "\n",
     "# paths of the dataset\n",
-    "hd = \"/home/silvia/Desktop/Data/DETECT/Detect_all_data_extended.hdf5\"\n",
-    "cs = \"/home/silvia/Desktop/Data/DETECT/Detect_all_metadata_extended.csv\"\n",
+    "hd = \"Detect_all_data_extended.hdf5\"\n",
+    "cs = \"Detect_all_metadata_extended.csv\"\n",
     "# Dataset containing the traces (D.seismogram) and other metadata (D.metadata)\n",
     "D = ClasseDataset()\n",
     "D.leggi_custom_dataset(hd,cs)                                       \n",
@@ -612,7 +612,7 @@
     "\n",
     "    ons_max = np.array(ons_max)\n",
     "    uu = pd.concat([uu,pd.DataFrame.from_dict({f\"{string_key}_ons_max\":ons_max})],axis=1)\n",
-    "    uu.to_csv(\"/home/silvia/Desktop/ONSET_HOS/ONSET_DETECT_whole.csv\",index=False)\n",
+    "    uu.to_csv(\"ONSET_DETECT_whole.csv\",index=False)\n",
     "    indi +=1\n",
     "print(\"\\nAlgoritmh ran for \", time.perf_counter()-Tempo_Inizio, \" to perform \", len(p), \"tests on \", len(D.sismogramma),\" traces each test\")\n"
    ]
@@ -661,7 +661,7 @@
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "times_hos = pd.read_csv(\"/home/silvia/Desktop/ONSET_HOS/ONSET_DETECT_whole.csv\")     # onset deriving from STS\n",
+    "times_hos = pd.read_csv(\"ONSET_DETECT_whole.csv\")     # onset deriving from STS\n",
     "times_hos[\"Accept\"] = \"FALSE\"\n",
     "\n",
     "BEST_key = 'stat: S_4 type_filter: bandpass filter freq: [1, 30] window_width: 300 tresh:_ons_th=0.1' # Best setting in our studycase\n",
@@ -714,7 +714,7 @@
     "                times_hos[\"Accept\"][picks[s[indi]:e[indi]+1].index] = \"TRUE\"\n",
     "\n",
     "                \n",
-    "times_hos.to_csv(f\"/home/silvia/Desktop/ONSET_HOS/ONSET_DETECT_whole_checked(std{std_eq}_tolerance40)_New.csv\", index=False)"
+    "times_hos.to_csv(f\"ONSET_DETECT_whole_checked(std{std_eq}_tolerance40)_New.csv\", index=False)"
    ]
   }
  ],
